Add accessibility feature to app

--- a/restaurant.html
+++ b/restaurant.html
@@ -33,7 +33,7 @@
     <!-- Beginning map -->
     <section id="map-container">
       <div id="map">
-        <div class="close leaflet-bar"><a href="#">x</a></div>
+        <div class="close leaflet-bar" ><a title = "close" aria-label="close" role="button" href="#">x</a></div>
       </div>
     </section>
     <!-- End map -->
