--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
@@ -18,16 +18,16 @@
   </header>
 
   <main id="maincontent">
-    <section tabindex="-1" id="map-container">
-      <div id="map"></div>
+    <section role="contentinfo" arial-label="Map Showing restaurants" tabindex="-1" id="map-container">
+      <div role="application" aria-label="map showing restaurants" id="map"></div>
     </section>
-    <section>
+    <section role="contentinfo" arial-label="Filter for restaurants and filter result">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select aria-label="neighborhoods select" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select aria-label="cuisines select" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
