--- a/restaurant.html
+++ b/restaurant.html
@@ -20,11 +20,10 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <nav aria-label="Breadcrumb">
-      <ul id="breadcrumb" >
-        <li><a href="/">Home</a></li>
-      </ul>
-    </nav>
+    <ul role="navigation" aria-label="breadcrumb" id="breadcrumb" >
+      <li><a href="/">Home</a></li>
+    </ul>
+
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
