--- a/restaurant.html
+++ b/restaurant.html
@@ -60,6 +60,29 @@
     <!-- Beginning reviews -->
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
+      <div>
+        <h2 id="review-header">Add a Review to our Restaurant</h2>
+        <form target="_blank" id="reviews-form" action="http://localhost:1337/reviews/" method="post">
+
+          <input id="restaurant_id" name="restaurant_id" type="hidden" value="xm234jq">
+          <div>
+          <label for="comments">Comment</label>
+            <textarea id="comments" name="comments" cols="45" rows="8" maxlength="65525" required="required"></textarea>
+          </div>
+
+          <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required="required">
+          <div>
+
+          <div>
+            <label for="rating">Rating</label>
+            <input type="range" name="rating" min="1" max="5" step="1">
+          </div>
+
+          <input onclick="window.location.reload();" name="submit" type="submit" id="submit" class="submit" value="Post Review">
+        </form>
+      </div>
     </section>
     <!-- End reviews -->
   </main>
