--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="img/logo/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="img/logo/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="img/logo/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="img/logo/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/logo/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/logo/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="img/logo/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/logo/favicon-16x16.png">
@@ -23,6 +23,8 @@
   <meta name="theme-color" content="#FD2C74">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin="" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+    crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>Restaurant Reviews</title>
